--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -168,15 +168,15 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 25px;
 }
 .form-01 > h2,
-.form-02 > h2{
+.form-02 > h2,
+.form-03 > h2{
     margin-bottom: 40px;
 }
-.form-02{
-    gap: 24px;
-}
-.question-closed{
+.question-closed,
+.level-closed{
     width: 600px;
 
     background-color: #fff;
@@ -186,15 +186,17 @@ main {
     justify-content: space-between;
     padding: 25px 15px;
 }
-.question-closed ion-icon{
+.question-closed ion-icon,
+.level-closed ion-icon{
     font-size: 26px;
 }
-.question-closed h2{
+.question-closed h2,
+.level-closed h2{
     font-size: 20px;
 }
-
 .quizz-infos,
-.question{
+.question,
+.level{
     display: flex;
     flex-direction: column;
     gap: 10px;
@@ -206,7 +208,9 @@ main {
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.05);
 }
 .quizz-infos input,
-.question input{
+.question input,
+.level input,
+.level textarea{
     width: 100%;
     height: 46px;
     padding-left: 23px;
@@ -217,23 +221,32 @@ main {
 
     color: #BABABA;
 }
+.level textarea{
+    resize: none;
+    padding-top: 10px;
+}
 .quizz-infos input::placeholder,
-.question input::placeholder{
+.question input::placeholder,
+.level input::placeholder,
+.level textarea::placeholder{
     font-size: 19px;
     font-style: italic;
     color: #BABABA;
 }
 .quizz-infos h3,
-.question h3{
+.question h3,
+.level h3{
     font-size: 16px;
     color: #EC362D;
     font-weight: normal;
     margin-top: 3px;
 }
-.question{
-    padding-top: 0;
+.question,
+.level{
+    padding-top: 10px;
 }
-.question h2{
+.question h2,
+.level h2{
     font-size: 20px;
     margin: 15px 0 10px;
 }
@@ -421,4 +434,9 @@ main {
 
     display: flex;
     align-items: flex-start;
+}
+textarea{
+    width: 250px;
+    height: 54px;
+    resize: none;
 }
