--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,7 +28,7 @@ header {
     color: #fff;
 }
 main {
-    padding-bottom: 400px;
+    padding-bottom: 250px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -103,7 +103,6 @@ main {
     display: flex;
     gap: 15px;
     flex-wrap: wrap;
-    justify-content: center;
 }
 .your-quizzes li,
 .all-quizzes li,
@@ -115,8 +114,6 @@ main {
 
     width: 340px;
     height: 181px;
-
-    background: url("https://th.bing.com/th/id/R.67262be6826b4ce581b3f2ad83a3c62d?rik=LvoBnksMeh2wLQ&pid=ImgRaw&r=0");
     background-size: cover;
 
     border-radius: 5px;
@@ -127,7 +124,7 @@ main {
     right: 0;
     bottom: 0;
     left: 0;
-    /* padding: 0 20px 10px 18px; */
+    padding: 0 20px 10px 18px;
     border-radius: 5px;
     background: linear-gradient(
         180deg,
@@ -141,6 +138,7 @@ main {
     cursor: pointer;
 
     display: flex;
+    align-items: flex-end;
 }
 
 .add-quizz {
@@ -290,12 +288,7 @@ main {
 .quizz-banner{
     height: 227px;
     width: 100%;
-
     position: relative;
-
-    background-image: url("https://criadoresid.com/wp-content/uploads/2016/11/hogwarts-real.jpg");
-    background-size: cover;
-
     margin-top: 69px;
 }
 
