feat: quizz edit

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,8 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    overflow-x: hidden;
 }
 
 header {
@@ -29,11 +31,13 @@ header {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 
     text-align: center;
-    padding: 13px 0;
-
     color: #fff;
-}
 
+    padding: 13px 0;
+}
+header h1{
+    cursor: pointer;
+}
 main {
     width: 1050px;
 
@@ -130,18 +134,17 @@ main {
 .all-quizzes li,
 .quizz-done {
     list-style: none;
-
     cursor: pointer;
-
     position: relative;
-
     width: 340px;
     height: 180px;
     background-size: cover;
-
     border-radius: 5px;
+    margin: 0 10px;
 }
-
+.form-04{
+    padding: 0 15px;
+}
 .quizz-background {
     position: absolute;
     top: 0;
@@ -160,9 +163,7 @@ main {
     font-size: 19px;
     font-weight: 400;
     cursor: pointer;
-
     word-break: break-word;
-
     display: flex;
     align-items: flex-end;
 }
@@ -339,7 +340,6 @@ main {
     position: relative;
     margin-top: 69px;
 }
-
 .quizz-banner > div {
     font-style: normal;
     font-size: 39px;
@@ -353,8 +353,9 @@ main {
     display: flex;
     align-items: center;
     justify-content: center;
+    text-align: center;
 
-    padding: 8px;
+    padding: 10px;
 
     position: absolute;
     top: 0;
