css fine adjustments
correcting visuals for the 'conclusion-wrapper' on responsive view

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -641,10 +641,15 @@ textarea {
     .conclusion-title, .questions-title {
         height: 90px;
     }
-
+    
+    .img-description-wrapper {
+        flex-direction: column;
+    }
+    
     .img-description-wrapper > img,
     .img-description-wrapper > p {
-        width: 48%;
+        width: 100%;
+        margin-bottom: 12px;
     }
 
     .screen-1 {
